added bug number

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>Search Query Interaction Design</h1>
-<p>Interaction spec for bug ???.</p>
+<p>Interaction spec for <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=958199">bug 958199</a>.</p>
 
 <div id="app">
   <div class="url-bar">
