--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 <h1>Search Query Interaction Design</h1>
 <p>Interaction spec for <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=958199">bug 958199</a>.</p>
+<p>This is what you see in the address bar when viewing the search result page for »whimsycal octopus«</p>
 
 <div id="app">
   <div class="url-bar">
