use an icon to indicate the action

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
 <div id="app">
   <div class="url-bar">
-    <input type="text" id="url-box" value="google.com">
+    <div id="url-box"></div>
     <input type="text" id="search-box" value="whimsycal octopus">
+  </div>
+  <div class="dropdown">
+    Placeholder for the dropdown
   </div>
 </div>
 
