add toggle button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <div class="url-bar">
     <div id="url-box"></div>
     <input type="text" id="search-box" value="whimsycal octopus">
+    <a class="url-button">URL</a>
   </div>
   <div class="dropdown">
     Placeholder for the dropdown
