remove additional info

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   </div>
 </div>
 
-<h2>Additional Notes</h2>
+<!--h2>Additional Notes</h2>
 <ul>
   <li>When a user enters a URL into the search portion of the bar, Firefox should just go to that URL.</li>
   <li>Pressing ESC in the search portion of the bar shows the full URL.</li>  
-</ul>
+</ul-->
 
 <script type="text/javascript" src="js/app.js"></script>
 </body>
