--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
 </head>
 <body>
 <h1>Search Query Interaction Design</h1>
-<p>Interaction spec for <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=958199">bug 958199</a>.</p>
-<p>This is what you see in the address bar when viewing the search result page for »whimsycal octopus«</p>
+<p>Interaction spec for <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=958199">bug 958199</a>. Questions? Ask <strong>:phlsa</strong> on IRC and Bugzilla!</p>
+<p>This is what you see in the address bar when viewing the search result page for »whimsical octopus«</p>
 
 <div id="app">
   <div class="url-bar">
     <div id="url-box"></div>
-    <input type="text" id="search-box" value="whimsycal octopus">
+    <input type="text" id="search-box" value="whimsical octopus">
     <a class="url-button">URL</a>
   </div>
   <div class="dropdown">
-    Placeholder for the dropdown
+    Awesomebar suggestions appear here
   </div>
 </div>
 
-<!--h2>Additional Notes</h2>
+<h2>Changes</h2>
 <ul>
-  <li>When a user enters a URL into the search portion of the bar, Firefox should just go to that URL.</li>
-  <li>Pressing ESC in the search portion of the bar shows the full URL.</li>  
-</ul-->
+  <li>When the browser shows a search result page from one of the installed search engines, the awesomebar displays the search terms instead of the URL of the page (regardless of how you've reached that page).</li>
+  <li>The URL of the search result page is available via a contextual menu or by pressing ESC when the cursor is in the awesomebar.</li>
+  <li>The icon on the left of the awesomebar changes according to how the query will be interpreted: a URL shows the globe, a search of any kind shows the magnifying glass</li>
+  <li><strong>This is not a new mode.</strong> As soon as you start typing/editing inside the awesomebar, the usual suggestions appear.</li>
+</ul>
 
 <script type="text/javascript" src="js/app.js"></script>
 </body>
