update bug number

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>Search Query Interaction Design</h1>
-<p>Interaction spec for <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=958199">bug 958199</a>. Questions? Ask <strong>:phlsa</strong> on IRC and Bugzilla!</p>
+<p>Interaction spec for <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1040392">bug 1040392</a>. Questions? Ask <strong>:phlsa</strong> on IRC and Bugzilla!</p>
 <p>This is what you see in the address bar when viewing the search result page for »whimsical octopus«</p>
 
 <div id="app">
