add description for encrypted sites

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <li>When the browser shows a search result page from one of the installed search engines, the awesomebar displays the search terms instead of the URL of the page (regardless of how you've reached that page).</li>
   <li>The URL of the search result page is available via a contextual menu or by pressing ESC when the cursor is in the awesomebar.</li>
   <li>The icon on the left of the awesomebar changes according to how the query will be interpreted: a URL shows the globe, a search of any kind shows the magnifying glass</li>
+  <li>If the search results page is encrypted, the site identity icon shows the lock instead of the magnifying glass (until the user starts typing – then the behavior described above applies)</li>
   <li><strong>This is not a new mode.</strong> As soon as you start typing/editing inside the awesomebar, the usual suggestions appear.</li>
 </ul>
 
